fixed listing of categories

--- a/website/frontend/templates/frontend/base.html
+++ b/website/frontend/templates/frontend/base.html
@@ -20,12 +20,9 @@
 		<div id="menu">
 			<a href="/">Home</a>
 			<p>
-			<a href="/category/laptops">Laptops</a><br>
-			<a href="/category/desktops">Desktops</a><br>
-			<a href="/category/monitors">Monitors</a><br>
-			<a href="/category/keyboards">Keyboards</a><br>
-			<a href="/category/mice">Mice</a><br>
-			<a href="/category/books">Books</a><br>
+			{% for category in global_categories %}
+			<a href="{% url "category" cat_name=category.name %}" style="text-transform: capitalize;">{{ category.name }}</a><br>
+			{% endfor %}
 		</div>
 		<div id="main_area">
 			{% block body %}{% endblock %}
