--- a/website/frontend/templates/frontend/category.html
+++ b/website/frontend/templates/frontend/category.html
@@ -13,7 +13,7 @@
 			</tr>
 		{% for product in product_list %}
 			<tr>
-				<td>{{product.name}}</td>
+				<td><a href="{% url "products.details" product_id=product.id %}">{{product.name}}</a></td>
 				<td>{{product.price}}</td>
 				<td>{{product.stock_quantity}}</td>
 				<td>{{product.rating}}</td>
